End of Section 4

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,7 +1,10 @@
 {
+  "AppSettings":{
+    "Token": "ddfldve dfdvver fffff"
+},
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=datingapp.db" 
-  }, 
+    "DefaultConnection": "Data Source=datingapp.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
