--- a/DatingApp.API/Properties/launchSettings.json
+++ b/DatingApp.API/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "applicationUrl": "http://localhost:5000",
       //"https": null, //localhost:5001;
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       }
     }
   }
